Update Neto page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sean Ockert - web developer and designer</title>
     <meta name="description" content="I am a creative, full-stack web professional with over 10 years of experience and a passion for usability and front-end development" />
     <link href="images/icon-sean-bamboo.png" rel="icon" type="image/png">
-    <link href="dist/css/style.css?rev=3670ff65e2281810f564e6f89a4b1768" rel="stylesheet" type="text/css">
+    <link href="dist/css/style.css?rev=41673ba4312dfc818df2b2ade1053a5f" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
@@ -78,10 +78,10 @@
             <h2><span>Recent work</span></h2>
             <ul class="no-list">
               <li>
-                <a href="https://www.netohq.com/" title="Visit Neto Ecommerce website">
+                <a href="neto/" title="Read Neto Ecommerce case study">
                   <h3>Neto Ecommerce</h3> 
                   <p>SaaS website management. Custom-built CMS functionality, product usability, sales funnel optimisation, <span>marketing campaigns.</span></p>
-                  <div class="link">Visit site &rarr;</div>
+                  <div class="link">Read more &rarr;</div>
                 </a>
               </li> 
               <li>
