--- a/neto/index.html
+++ b/neto/index.html
@@ -49,8 +49,6 @@
             <p>Along with building out our web capabilities, my role also encompassed assisting with paid acquisition, marketing campaigns, designing print assets, analytics, copywriting, user testing and product design.</p>
 
    
-            
-
  
             <h3>Migrating the Neto public website</h3>
 
@@ -86,26 +84,34 @@
 
             <p>There are delicate SEO issues with migrating existing content to a new domain. It’s a chicken and egg problem of attempting to build up domain authority on the new <em>netohq.com</em> domain while not impacting organic traffic on the existing <em>neto.com.au</em> domain.</p> 
 
-            <p>We settled on a hybrid approach of migrating one section of the website at a time (eg. add-ons directory), implementing the appropriate hreflang tags and measuring the impact. After a few weeks of this, we would then 301 redirect that section.</p>
+            <p>We settled on a hybrid approach of migrating one section of the website at a time (eg. add-ons directory), implementing the appropriate <em>hreflang</em> tags and measuring the impact. After a few weeks of this, we would then 301 redirect that section.</p>
 
             <p>For some sections, especially the documentation, we saw an initial drop-off in traffic, which slowly started to recover after the new pages were indexed by Google and <em>netohq.com</em> domain authority increased.</p>
 
-            <p>Neto had invested a lot in SEO for <em>neto.com.au</em> with an agency, especially link building. So the CEO was very adamant that we not impact the progress made. Thankfully, most of our acquisition was paid so the initial reduction in organic traffic was mitigated. The move was necessary and sometimes you have to ignore sunk costs to move forwards.</p>
+            <p>Neto had invested a lot in SEO for <em>neto.com.au</em> with an agency, especially link building. So our CEO was very adamant that we not impact any progress made. Thankfully, most of our acquisition was through paid channels, so the initial reduction in organic traffic was mitigated. The move was necessary for our business roadmap. Sometimes you have to ignore sunk costs to move forwards.</p>
 
-            <figure>
+            <!--<figure>
               <img src="../images/page/screen-neto-roadmap.jpg" alt="Screenshot of a Neto roadmap" height="404" width="877">
-              <figcaption>Neto roadmap page</figcaption>
-            </figure> 
+              <figcaption>Neto product roadmap page. <a href="https://www.netohq.com/roadmap" title="View roadmap page">Source</a></figcaption>
+            </figure> -->
 
             <h3>What? We have no landing pages?</h3>
 
+
             <p>Before I joined, the marketing team had no way to create dedicated campaign landing pages. Most paid acquisition were directed to the homepage or the free trial page, which were low relevance to the actual campaigns and therefore gave us junk quality scores.</p>
 
-            <p>One of the first wins for the new CMS was giving the marketing team an ability to build landing pages from a set of pre-built components.</p>
+            <p>The first win for the new CMS was giving marketing the ability to build landing pages from a set of pre-built components.</p>
+
+           <figure>
+              <img src="../images/page/screen-neto-landing-page.jpg" alt="Example of a Neto landing page" height="543" width="990">
+              <figcaption>A landing page hero section</figcaption>
+            </figure> 
 
             <p>We established a list of components (eg. hero banner, feature list, call-to-action, etc.) and every possible permutations they might have. From this, I built flexible templates and data structures using Craft’s matrix to accommodate different messaging and layouts.</p>
 
             <p>I worked closely with everyone who needed to build a landing page we went through a few iterations, both for the visual layouts which were A/B tested for best click-through rate and how the content could be edited. From this, I wrote up guidelines on how to create a landing page and best practices.</p>
+
+            <h4>Wins</h4>
 
             <p>Using targeted landing pages, we were able to:</p>
 
@@ -115,7 +121,9 @@
               <li>Better attribute conversions to their campaign</li>
             </ul>
 
-            <p>Issues encountered were mainly on the author side:</p>
+            <h4>Pain points</h4>
+
+            <p>Issues encountered were mainly on the content creation end:</p>
 
             <ul>
               <li>Achieving a balance between too much editing freedom, and not enough. Eg. allowing authors to add their own HTML proved a nightmare to maintain and unclosed tags could break the page.</li>
@@ -146,7 +154,7 @@
 
             <p>Though similar in some respects, the user intent differed between the directories.</p> 
 
-            <h4>Integrate with Neto</h4> 
+            <h4>Third-party integrations with Neto</h4> 
 
             <p>For add-ons, we want to answer:</p>
             <ol>
@@ -194,7 +202,7 @@
 
 
             <h3>How much is that software in the window?</h3>
-            <p>The pricing page is a vital conversion point that simply wasn’t pulling its weight on <em>neto.com.au</em>. Neto pricing is a bit more complicated than its competitors, as there’s a fair amount of room to customise your subscription plan. Our goals were:</p>
+            <p>The <strong>pricing page</strong> is a vital conversion point that simply wasn’t pulling its weight on <em>neto.com.au</em>. Neto pricing is a bit more complicated than its competitors, as there’s a fair amount of room to customise your subscription plan. Our goals were:</p>
 
             <ol>
               <li>Improve conversion rate</li>
@@ -209,7 +217,12 @@
 
             <p>I worked closely with the sales team and used their feedback and knowledge of our customer needs to build a new pricing page.</p>
 
-            <p>Some improvements made to the ner version were:</p>
+            <figure>
+              <img src="../images/page/screen-neto-pricing-plans.jpg" alt="Screenshot of the Neto pricing plans" height="715" width="1183">
+              <figcaption>New pricing plans. <a href="https://www.netohq.com/pricing" title="Visit pricing page">Source</a></figcaption>
+            </figure> 
+
+            <p>Some improvements made to the <a href="https://www.netohq.com/pricing" title="Visit pricing page">new version</a> were:</p>
             <ul>
               <li>Split out the complete feature list to give the key comparison points more focus</li>
               <li>Clearer call-to-actions and next steps</li>
@@ -218,30 +231,6 @@
               <li>Made the page easier to use on mobile</li>
             </ul>
 
-            <figure>
-              <img src="../images/page/screen-neto-pricing-plans.jpg" alt="Screenshot of the Neto pricing plans" height="715" width="1183">
-              <figcaption>New pricing plans</figcaption>
-            </figure> 
-
-
-            <h4>Calculate plan pricing</h4>
-
-            <p>One recurring complaint we had from prospects was they had difficulty calculating the true cost of using Neto. To address this, I built <a href="https://www.netohq.com/pricing/calculator" title="View Neto pricing calculator">a pricing calculator</a> which allowed them to:</p>
-
-            <ul>
-              <li>Select requirements for their business</li>
-              <li>Give them a price estimate</li>
-              <li>Recommend the best plan</li>
-              <li>Email them a quote</li>
-            </ul>
-
-           <!-- <figure class="inline">
-              <img src="../images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388">
-              <figcaption>New pricing plans</figcaption>
-            </figure> -->
-
-            <p><img src="../images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388"> The calculator was built with Vue JS so the price estimate could change immediately based on their selections. I planned to take this further so users could estimate their setup and store design costs, but we can’t accurately quantify these prices yet. However, the calculator is flexible to allow this in future. It also supports multiple currencies and tax rates, for New Zealand users. This has been helpful for design partners as well, to quote their clients who want to use Neto.
-            </p>
 
             <p>When the new pricing page went live, we saw:</p>
 
@@ -253,7 +242,46 @@
 
             <p>The sales team were also happier as they rely on this page often when talking to prospects.</p>
  
-            <p>...TBC</p>
+
+            <h4>Calculate plan pricing</h4>
+
+            <p>One recurring complaint we had from prospects was they had difficulty calculating the true cost of using Neto. To address this, I built <a href="https://www.netohq.com/pricing/calculator" title="View Neto pricing calculator">a pricing calculator</a> which allowed prospects to:</p>
+
+            <ul>
+              <li>Select requirements for their business</li>
+              <li>Give them a price estimate</li>
+              <li>Recommend the best plan</li>
+              <li>Email them a quote</li>
+            </ul>
+
+            <figure class="img-three">
+              <img src="../images/page/screen-neto-calculator-1.jpg" alt="Screenshot of a Neto pricing calculator on mobile 1" height="750" width="1250">
+              <img src="../images/page/screen-neto-calculator-2.jpg" alt="Screenshot of a Neto pricing calculator on mobile 2" height="750" width="1250">
+              <img src="../images/page/screen-neto-calculator-3.jpg" alt="Screenshot of a Neto pricing calculator on mobile 3" height="750" width="1250">
+              <figcaption>Pricing calculator on mobile</figcaption>
+            </figure> 
+
+           <!-- <figure class="inline">
+              <img src="../images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388">
+              <figcaption>New pricing plans</figcaption>
+            </figure> -->
+
+            <p><!--<img src="../images/page/screen-neto-pricing-calculator-results.jpg" alt="Screenshot of the Neto pricing calculator results" height="548" width="388">--> The calculator was built quickly using VueJS. The reactive data-binding allowed the price estimate to change immediately based on their selection.</p> 
+
+            <p>I planned to take this further so users could estimate their setup and store design costs, but we can’t accurately quantify these prices yet. However, the calculator is flexible to allow this in future. It also supports multiple currencies and tax rates, for New Zealand users.</p>
+
+            <p>This has been helpful for Neto's design partners as well, as they're able to better quote their own clients.</p>
+
+            <figure>
+              <img src="../images/page/screen-neto-case-study-listing.jpg" alt="Case studies" height="467" width="803">
+              <figcaption>Case studies</figcaption>
+            </figure> 
+
+            <figure class="img-two">
+              <img src="../images/page/screen-neto-xl.jpg" alt="XL plan microsite on mobile" height="668" width="377">
+              <img src="../images/page/screen-neto-manage.jpg" alt="XL plan microsite on mobile" height="668" width="377">
+              <figcaption>XL page and Manage overview on mobile</figcaption>
+            </figure> 
 
           </div>
         </article>
