Add link to Github

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sean Ockert - web developer and designer</title>
     <meta name="description" content="I am a creative, full-stack web professional with over 10 years of experience and a passion for usability and front-end development" />
     <link href="images/icon-sean-bamboo.png" rel="icon" type="image/png">
-    <link href="dist/css/style.css?rev=41673ba4312dfc818df2b2ade1053a5f" rel="stylesheet" type="text/css">
+    <link href="dist/css/style.css?rev=88ae6cc460ea75bf61091886eca90deb" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
@@ -54,8 +54,8 @@
                   <h3><a href="mailto:hello@seanockert.com" title="Get in touch">hello@seanockert.com</a></h3>
                   <ul class="nolist ">
                     <li><a href="https://twitter.com/seanockert" title="Follow Sean on Twitter">Twitter</a></li>
-                    <li><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with Sean on LinkedIn">LinkedIn</a></li>
-                    <!--<li><a href="https://github.com/seanockert" title="View Sean's GitHub profile">GitHub</a></li>-->
+                    <li class="hidden-small"><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with Sean on LinkedIn">LinkedIn</a></li>
+                    <li><a href="https://github.com/seanockert" title="View Sean's GitHub profile">GitHub</a></li>
                     <li><a href="sean-ockert-resume-2018.pdf" title="Download Sean's resume" class="no-barba">Resume</a></li>
                   </ul>
                 </div>
