Disable Barba links on mobile

--- a/halfbrick/index.html
+++ b/halfbrick/index.html
@@ -186,7 +186,7 @@
 
       </div>
     </div></div> <!-- End barba -->
-    <script src="../dist/js/scripts.min.js?rev=31249342eaa88c79d8b3feaf9baa4089" defer></script>
+    <script src="../dist/js/scripts.min.js" defer></script>
   </body>
 </html>
 
