--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sean Ockert - web developer and designer</title>
     <meta name="description" content="I am a creative, full-stack web professional with over 10 years of experience and a passion for usability and front-end development" />
     <link href="images/icon-sean-bamboo.png" rel="icon" type="image/png">
-    <link href="dist/css/style.css?rev=88ae6cc460ea75bf61091886eca90deb" rel="stylesheet" type="text/css">
+    <link href="/dist/css/style.css?rev=88ae6cc460ea75bf61091886eca90deb" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script>
@@ -78,28 +78,28 @@
             <h2><span>Recent work</span></h2>
             <ul class="no-list">
               <li>
-                <a href="neto/" title="Read Neto Ecommerce case study">
+                <a href="/neto" title="Read Neto Ecommerce case study">
                   <h3>Neto Ecommerce</h3> 
                   <p>SaaS website management. Custom-built CMS functionality, product usability, sales funnel optimisation, <span>marketing campaigns.</span></p>
                   <div class="link">Read more &rarr;</div>
                 </a>
               </li> 
               <li>
-                <a href="https://www.student.qut.edu.au/" title="Visit QUT Student Directory">
+                <a href="https://www.qut.edu.au/" title="Visit QUT Student Directory">
                   <h3>Queensland University of Technology</h3> 
                   <p>Redevelopment of the university's Student Directory and <span>HiQ website</span></p>
-                  <div class="link">Visit site &rarr;</div>
+                  <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(42,151,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
               </li>              
               <li>
-                <a href="halfbrick/" title="Read Halfbrick case study">
+                <a href="/halfbrick" title="Read Halfbrick case study">
                   <h3>Halfbrick Studios</h3> 
                   <p>Websites &amp; online marketing for over a million visitors <span>per month.</span></p>
                   <div class="link">Read more &rarr;</div>
                 </a>
               </li>
               <li>
-                <a href="fruit-ninja/" title="Read Fruit Ninja case study">
+                <a href="/fruit-ninja" title="Read Fruit Ninja case study">
                   <h3>Fruit Ninja</h3> 
                   <p>Websites &amp; marketing campaigns for one of the most popular mobile <span>games ever.</span></p>
                   <div class="link">Read more &rarr;</div>
@@ -109,14 +109,14 @@
                 <a href="https://thesteepery.com.au" title="Visit The Steepery website">
                   <h3>The Steepery</h3> 
                   <p>Bespoke Shopify store selling boutique <span>tea products.</span></p>
-                  <div class="link">Visit site &rarr;</div>
+                  <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(42,151,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
               </li>
               <li>
                 <a href="https://www.gdaa.com.au" title="Visit Games Developers Association of Australia website">
                   <h3>Games Developers Association of Australia</h3> 
                   <p>Redesign of WordPress site to showcase Australian <span>game developers.</span></p>
-                  <div class="link">Visit site &rarr;</div>
+                  <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(42,151,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
               </li>
             </ul> 
@@ -127,20 +127,20 @@
                 <a href="https://so-neto-email.surge.sh/" title="View Neto Email Content Generator project">
                   <h3>Email Content Generator</h3> 
                   <p>Construct emails from pre-witten content. Internal tool for <span>Neto staff.</span></p>
-                  <div class="link">View project &rarr;</div>
+                  <div class="link">View project <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(42,151,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
               <li>
                 <a href="https://so-tinysums.surge.sh/" title="View TinySums project">
                   <h3>Tiny Sums</h3> 
                   <p>Do back-of-the-envelope calculations with natural language. A real workout for <span>regex skills.</span></p>
-                  <div class="link">View project &rarr;</div>
+                  <div class="link">View project <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(42,151,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
               </li> 
               <li>
                 <a href="https://so-card-sort.surge.sh/" title="View Card Sort">
                   <h3>Card Sort</h3> 
                   <p>A Trello-like board, for lists or card-sorting exercises. Built <span>with Vue.</span></p>
-                  <div class="link">View project &rarr;</div>
+                  <div class="link">View project <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(42,151,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
               </li>
             </ul>
@@ -186,8 +186,7 @@
     
     </div></div> <!-- End barba -->
     <div class="transition-in transition-out"></div>
-    <script src="https://seanockert.com/dist/js/scripts.min.js?rev=31249342eaa88c79d8b3feaf9baa4090" defer></script>
-    <!--<script src="http://127.0.0.1:59653/dist/js/scripts.min.js?rev=31249342eaa88c79d8b3feaf9baa4090" defer></script>-->
+    <script src="/dist/js/scripts.min.js" defer></script>
   </body>
 </html>
 
