Update resume files

--- a/neto/index.html
+++ b/neto/index.html
@@ -30,7 +30,7 @@
           <div class="row">
             <h1>Neto Ecommerce</h1>
             <hr>
-            <p>Web developer in charge of the public face of a <span>SaaS company.</span></p>
+            <p>Web developer responsible for the public face of a <span>SaaS company.</span></p>
             <a href="https://www.netohq.com" class="button" title="Visit the Neto website">Visit the website</a>
           </div>
         </header>
@@ -44,23 +44,21 @@
               <a href="https://www.netohq.com" title="Visit the Neto website"><img src="../images/page/screen-neto-homepage.jpg" alt="Screenshot of the Neto homepage" height="768" width="1024"></a>
             </figure> 
 
-            <p>I joined in 2017 to take ownership of the Neto public website.</p>
+            <p>I joined Neto in 2017 to take ownership of the Neto public website.</p>
 
-            <p>Along with building out our web capabilities, my role also encompassed assisting with paid acquisition, marketing campaigns, designing print assets, analytics, copywriting, user testing and product design.</p>
+            <p>Along with building out our web capabilities, my role also encompassed user acquisition, marketing campaigns, print asset design, analytics, copywriting, user testing, and product development.</p>
 
-   
- 
             <h3>Migrating the Neto public website</h3>
 
-            <p>The website is key for acquiring new customers, as Neto’s acquisition (and our target metrics) focused on converting prospects to a free trial of the platform; followed up by a sales call.</p>
+            <p>The website is key for acquiring new customers, as Neto’s acquisition (and our target metrics) focused on converting prospects to a free trial of the ecommerce product; followed by a sales call.</p>
 
-            <p>Neto had built up its customer-base from Australian retailers but was looking to attract international sellers when I joined. This involved not only changes to the platform, but also moving their established site from an Australian domain to a new global domain: <em>neto.com.au</em> to <em>netohq.com</em>.
+            <p>Neto had built up its customer-base from Australian retailers, but was looking to expand to an international market. This involved not only updates to the product, but also migrating the established, public website from an Australian domain: <em>neto.com.au</em>, to a global domain: <em>netohq.com</em>.
 
-            <p>With multiple stakeholders, outdated content, and poor site accessibility, migrating the website presented some technical and logistical challenges.</p>
+            <p>With multiple stakeholders, stale content, and poor accessibility, migrating the website presented some technical and logistical challenges.</p>
 
             <h4>Setting up a new shop</h4>
 
-            <p>The website on the <em>neto.com.au</em> domain was built on Neto’s own SaaS platform, which&mdash;although good for ecommerce&mdash;lacked the capability required to be the kind of content management system that we needed. I took this opportunity to completely rebuild the site with a dedicated CMS and modern web standards. This would help reach our migration goals, which were:</p>
+            <p>The website on the <em>neto.com.au</em> domain was built on Neto’s own SaaS platform, which&mdash;although applicable for ecommerce&mdash;lacked the capability required to be the content management system that we needed. I took this opportunity to completely rebuild the site with a dedicated CMS and modern web standards. This would help achieve our migration goals, which were:</p>
 
             <ol>
               <li>Market to customers outside of Australia</li>
@@ -70,25 +68,25 @@
               <li>Assets managed from one place</li>
               <li>Document history for legal pages</li>
               <li>Faster development and iteration of the website</li>
-              <li>Improved SEO</li>
+              <li>Improved on-site SEO</li>
               <li>Improved all-round visitor experience</li>
             </ol>
 
-            <p>I evaluated a few content management systems (WordPress was dropped early) and settled on <strong>Craft CMS</strong>, for its ease of development, flexible template model and community support.</p>
+            <p>I evaluated several content management systems and settled on <strong>Craft CMS</strong> for its ease of development, flexible template model and community support.</p>
 
-            <p>Over a dozen non-technical people in the company have used the new CMS and all have found Craft intuitive and easy to use from a publishing side.</p>
+            <p>A dozen non-technical people in the company have since used the new CMS to publish content and all have found it much more intuitive and easy to use than the previous system.</p>
 
             <p>As the sole developer, building on Craft CMS has been a very good experience, and allowed me to address feature requests and implement changes rapidly.</p>
 
             <h4>Migration pain points</h4>
 
-            <p>There are delicate SEO issues with migrating existing content to a new domain. It’s a chicken and egg problem of attempting to build up domain authority on the new <em>netohq.com</em> domain while not impacting organic traffic on the existing <em>neto.com.au</em> domain.</p> 
+            <p>There are delicate SEO issues in migrating existing content to a new domain. It’s a chicken and egg problem of attempting to build up domain authority on the new <em>netohq.com</em> domain without negatively impacting organic traffic on the existing domain.</p> 
 
-            <p>We settled on a hybrid approach of migrating one section of the website at a time (eg. add-ons directory), implementing the appropriate <em>hreflang</em> tags and measuring the impact. After a few weeks of this, we would then 301 redirect that section.</p>
+            <p>We settled on a hybrid approach of migrating one section of the website at a time (eg. blog posts), implementing the appropriate <em>hreflang</em> tags and measuring the impact. After a few weeks, we would then 301 redirect that section.</p>
 
-            <p>For some sections, especially the documentation, we saw an initial drop-off in traffic, which slowly started to recover after the new pages were indexed by Google and <em>netohq.com</em> domain authority increased.</p>
+            <p>For some sections, especially documentation, we saw an initial drop-off in traffic, which slowly started to recover after the new pages were indexed by Google and <em>netohq.com</em> domain authority improved.</p>
 
-            <p>Neto had invested a lot in SEO for <em>neto.com.au</em> with an agency, especially link building. So our CEO was very adamant that we not impact any progress made. Thankfully, most of our acquisition was through paid channels, so the initial reduction in organic traffic was mitigated. The move was necessary for our business roadmap. Sometimes you have to ignore sunk costs to move forwards.</p>
+            <p>Neto had invested a lot in SEO for <em>neto.com.au</em>, especially link building. So our CEO was very adamant that we not impact any progress made. Thankfully, most of our acquisition was through paid channels, so the initial reduction in organic traffic was mitigated. The move was necessary for our business roadmap. Sometimes you have to ignore sunk costs to move forwards.</p>
 
             <!--<figure>
               <img src="../images/page/screen-neto-roadmap.jpg" alt="Screenshot of a Neto roadmap" height="404" width="877">
@@ -98,9 +96,9 @@
             <h3>What? We have no landing pages?</h3>
 
 
-            <p>Before I joined, the marketing team had no way to create dedicated campaign landing pages. Most paid acquisition were directed to the homepage or the free trial page, which were low relevance to the actual campaigns and therefore gave us junk quality scores.</p>
+            <p>Before I joined Neto, the marketing team had no way to create dedicated landing pages for campaigns. Most paid acquisition were directed to the homepage or the free trial page, which were low relevance to the actual campaigns and therefore gave us junk quality scores.</p>
 
-            <p>The first win for the new CMS was giving marketing the ability to build landing pages from a set of pre-built components.</p>
+            <p>The first win for the new CMS was to give marketing staff the ability to build landing pages from a set of pre-defined components.</p>
 
            <figure>
               <img src="../images/page/screen-neto-landing-page.jpg" alt="Example of a Neto landing page" height="543" width="990">
@@ -295,7 +293,7 @@
             <li><a href="https://twitter.com/seanockert" title="Follow me on Twitter">Twitter</a></li>
             <li class="hidden-small"><a href="https://www.linkedin.com/in/sean-ockert-b2294230" title="Connect with me on LinkedIn">LinkedIn</a></li>
             <li><a href="https://github.com/seanockert" title="View my GitHub profile">GitHub</a></li>
-            <li><a href="../sean-ockert-resume-2018.pdf" title="Download my resume" class="no-barba">Resume</a></li>
+            <li><a href="../sean-ockert-resume-2019.pdf" title="Download my resume" class="no-barba">Resume</a></li>
           </ul>
         </footer>
 
