--- a/halfbrick/index.html
+++ b/halfbrick/index.html
@@ -49,6 +49,12 @@
           </div>
         </header>
 
+        <div class="wave">
+          <svg viewBox="0 0 1440 100" width="100%" height="100%">
+            <path fill="rgb(249,249,249)" d="M1440,21.2101911 L1440,120 L0,120 L0,21.2101911 C120,35.0700637 240,42 360,42 C480,42 600,35.0700637 720,21.2101911 C808.32779,12.416393 874.573633,6.87702029 918.737528,4.59207306 C972.491685,1.8109458 1026.24584,0.420382166 1080,0.420382166 C1200,0.420382166 1320,7.35031847 1440,21.2101911 Z"></path>
+          </svg>
+        </div>
+
         <article class="page-section">
           <div class="row">
             <p>Halfbrick is a successful games company based in Brisbane, who has developed hugely popular mobile games such as Fruit Ninja and Jetpack Joyride.</p> 
