--- a/index.html
+++ b/index.html
@@ -83,10 +83,8 @@
           <div class="inner">
             <div class="column" id="projects">
             <header class="intro">
-              <h4>Greetings from the trenches!</h4> 
-              <p>Find me wielding wireframes &mdash; battling responsive layouts, sneaky browser quirks, and the JavaScript hoards.</p>
-
-              <p>Ten years of championing usability. Pedantic about performance. Victory tastes like a <strong>product-market fit</strong>, <strong>great user experience</strong>, and <strong>happy clients</strong>.</p>
+              <h4>Greetings from the front line!</h4> 
+              <p>I'm Sean, a front-end developer with a ten years of championing usability, clarity and performance. Success is a <strong>product-market fit</strong>, <strong>great user experience</strong>, and <strong>happy clients</strong>.</p>
               <p>Need to <strong>recruit a web veteran</strong> for your next project? <a href="mailto:hello@seanockert.com" title="Email Sean">Get in touch</a>.</p>
             </header>
             
