Add image thumbnails to listing

--- a/neto/index.html
+++ b/neto/index.html
@@ -66,9 +66,53 @@
 
             <p>I joined Neto in 2017 to take ownership of the Neto public website.</p>
 
-            <p>Along with building out our web capabilities, my role also encompassed user acquisition, marketing campaigns, print asset design, analytics, copywriting, user testing, and product development.</p>
+            <p>Along with building out our web capabilities, my role also encompassed:</p> 
+            <ul>
+              <li>user acquisition</li>
+              <li>marketing campaigns</li>
+              <li>print asset design</li>
+              <li>analytics</li>
+              <li>copywriting</li>
+              <li>user testing</li>
+              <li>user interface design</li>
+              <li>product development</li>
+            </ul>
 
-            <h3>Migrating the Neto public website</h3>
+            <h3>What? We have no landing pages?</h3>
+
+            <p>Before I joined Neto, the marketing team had no way to create dedicated landing pages for campaigns. Most paid acquisition were directed to the homepage or the free trial page, which were low relevance to the actual campaigns and therefore gave us junk quality scores.</p>
+
+            <p>The first win for the new CMS was to give marketing staff the ability to build landing pages from a set of pre-defined components.</p>
+
+           <figure>
+              <img src="../images/page/screen-neto-landing-page.jpg" alt="Example of a Neto landing page" height="543" width="990">
+              <figcaption>A landing page hero section</figcaption>
+            </figure> 
+
+            <p>We established a list of components (eg. hero banner, feature list, call-to-action, etc.) and every possible permutations they might have. From this, I built flexible templates and data structures using Craft’s matrix to accommodate different messaging and layouts.</p>
+
+            <p>I worked closely with everyone who needed to build a landing page we went through a few iterations, both for the visual layouts which were A/B tested for best click-through rate and how the content could be edited. From this, I wrote up guidelines on how to create a landing page and best practices.</p>
+
+            <h4>Wins</h4>
+
+            <p>Using targeted landing pages, we were able to:</p>
+
+            <ul>
+              <li>Reduce our ad spending</li>
+              <li>Match the messaging with content</li>
+              <li>Better attribute conversions to their campaign</li>
+            </ul>
+
+            <h4>Pain points</h4>
+
+            <p>Issues encountered were mainly on the content creation end:</p>
+
+            <ul>
+              <li>Achieving a balance between too much editing freedom, and not enough. Eg. allowing authors to add their own HTML proved a nightmare to maintain and unclosed tags could break the page.</li>
+              <li>Authors do not understand responsive design; that their content needs to adapt to mobile. Eg. insistence on “above the fold” and using too large images.</li>
+            </ul>
+
+            <h3>Migrating the Neto website</h3>
 
             <p>The website is key for acquiring new customers, as Neto’s acquisition (and our target metrics) focused on converting prospects to a free trial of the ecommerce product; followed by a sales call.</p>
 
@@ -113,40 +157,6 @@
               <figcaption>Neto product roadmap page. <a href="https://www.netohq.com/roadmap" title="View roadmap page">Source</a></figcaption>
             </figure> -->
 
-            <h3>What? We have no landing pages?</h3>
-
-
-            <p>Before I joined Neto, the marketing team had no way to create dedicated landing pages for campaigns. Most paid acquisition were directed to the homepage or the free trial page, which were low relevance to the actual campaigns and therefore gave us junk quality scores.</p>
-
-            <p>The first win for the new CMS was to give marketing staff the ability to build landing pages from a set of pre-defined components.</p>
-
-           <figure>
-              <img src="../images/page/screen-neto-landing-page.jpg" alt="Example of a Neto landing page" height="543" width="990">
-              <figcaption>A landing page hero section</figcaption>
-            </figure> 
-
-            <p>We established a list of components (eg. hero banner, feature list, call-to-action, etc.) and every possible permutations they might have. From this, I built flexible templates and data structures using Craft’s matrix to accommodate different messaging and layouts.</p>
-
-            <p>I worked closely with everyone who needed to build a landing page we went through a few iterations, both for the visual layouts which were A/B tested for best click-through rate and how the content could be edited. From this, I wrote up guidelines on how to create a landing page and best practices.</p>
-
-            <h4>Wins</h4>
-
-            <p>Using targeted landing pages, we were able to:</p>
-
-            <ul>
-              <li>Reduce our ad spending</li>
-              <li>Match the messaging with content</li>
-              <li>Better attribute conversions to their campaign</li>
-            </ul>
-
-            <h4>Pain points</h4>
-
-            <p>Issues encountered were mainly on the content creation end:</p>
-
-            <ul>
-              <li>Achieving a balance between too much editing freedom, and not enough. Eg. allowing authors to add their own HTML proved a nightmare to maintain and unclosed tags could break the page.</li>
-              <li>Authors do not understand responsive design; that their content needs to adapt to mobile. Eg. insistence on “above the fold” and using too large images.</li>
-            </ul>
 
             <h3>Finding experts and add-ons for your store</h3>
 
@@ -219,7 +229,7 @@
             <p>We added event tracking to these directories to monitor and measure click-throughs, engagement, if experts were contact, and if add-ons were installed. We have seen an increase in visits but did not have historical data to compare events from the previous version.</p>
 
 
-            <h3>How much is that software in the window?</h3>
+            <h3>Improving our pricing</h3>
             <p>The <strong>pricing page</strong> is a vital conversion point that simply wasn’t pulling its weight on <em>neto.com.au</em>. Neto pricing is a bit more complicated than its competitors, as there’s a fair amount of room to customise your subscription plan. Our goals were:</p>
 
             <ol>
