--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="I am a creative, full-stack web professional with over 10 years of experience and a passion for usability and front-end development" />
     <link href="images/icon-sean-bamboo.png" rel="icon" type="image/png">
 
-    <link href="dist/css/style.css?rev=46adf027fb7ee2bae693c09d6ea2f5d7" rel="stylesheet" type="text/css">
+    <link href="dist/css/style.css?rev=94d4a7d2dccb635e0925c3d84e5fd4c8" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
@@ -85,53 +85,71 @@
             <header class="intro">
               <h4>Greetings from the front line!</h4> 
               <p>I'm Sean, a front-end developer with a ten years of championing usability, clarity and performance. Success is a <strong>product-market fit</strong>, <strong>great user experience</strong>, and <strong>happy clients</strong>.</p>
-              <p>Need to <strong>recruit a web veteran</strong> for your next project? <a href="mailto:hello@seanockert.com" title="Email Sean">Get in touch</a>.</p>
+              <p>Need to <strong>recruit a web veteran</strong> for your next project? <a href="mailto:hello@seanockert.com" title="Email Sean">Get in touch &rarr;</a></p>
             </header>
             
             <h2><span>Recent work</span></h2>
             <ul class="no-list">
               <li>
                 <a href="/neto" title="Read Neto Ecommerce case study">
-                  <h3>Neto Ecommerce</h3> 
-                  <p>SaaS website management. Custom-built CMS functionality, product usability, sales funnel optimisation, <span>marketing campaigns.</span></p>
-                  <div class="link">Read more &rarr;</div>
+                  <!--<figure><img src="images/thumb-neto.jpg" alt=""></figure>-->
+                  <div>
+                    <h3>Neto Ecommerce</h3> 
+                    <p>SaaS website management. Custom-built CMS functionality, product usability, sales funnel optimisation, <span>marketing campaigns.</span></p>
+                    <div class="link">Read more &rarr;</div>
+                  </div>
                 </a>
               </li> 
               <li>
                 <a href="https://www.qut.edu.au/" title="Visit QUT Student Directory">
-                  <h3>Queensland University of Technology</h3> 
-                  <p>Redevelopment of the university's Student Directory and <span>HiQ website</span></p>
-                  <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  <!--<figure><img src="images/thumb-qut-course.jpg" alt=""></figure>-->
+                  <div>
+                    <h3>Queensland University of Technology</h3> 
+                    <p>Re-development of the university's Student Directory and <span>HiQ website</span>.</p>
+                    <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  </div>
                 </a>
               </li>              
               <li>
                 <a href="/halfbrick" title="Read Halfbrick case study">
-                  <h3>Halfbrick Studios</h3> 
-                  <p>Websites &amp; online marketing for over a million visitors <span>per month.</span></p>
-                  <div class="link">Read more &rarr;</div>
+                  <!--<figure><img src="images/thumb-halfbrick-homepage.jpg" alt=""></figure>-->
+                  <div>                  
+                    <h3>Halfbrick Studios</h3> 
+                    <p>Websites &amp; online marketing for over a million visitors <span>per month.</span></p>
+                    <div class="link">Read more &rarr;</div>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="/fruit-ninja" title="Read Fruit Ninja case study">
-                  <h3>Fruit Ninja</h3> 
-                  <p>Websites &amp; marketing campaigns for one of the most popular mobile <span>games ever.</span></p>
-                  <div class="link">Read more &rarr;</div>
+                  <!--<figure><img src="images/thumb-fruit-ninja-homepage.jpg" alt=""></figure>-->
+                  <div>
+                    <h3>Fruit Ninja</h3> 
+                    <p>Websites &amp; marketing campaigns for one of the most popular mobile <span>games ever.</span></p>
+                    <div class="link">Read more &rarr;</div>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="https://thesteepery.com.au" title="Visit The Steepery website">
-                  <h3>The Steepery</h3> 
-                  <p>Bespoke Shopify store selling boutique <span>tea products.</span></p>
-                  <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  <!--<figure><img src="images/thumb-the-steepery.jpg" alt=""></figure>-->
+                  <div>
+                    <h3>The Steepery</h3> 
+                    <p>Bespoke Shopify store selling boutique <span>tea products.</span></p>
+                    <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  </div>
                 </a>
               </li>
-              <li>
+              <!--<li>
                 <a href="https://www.gdaa.com.au" title="Visit Games Developers Association of Australia website">
-                  <h3>Games Developers Association of Australia</h3> 
-                  <p>Redesign of WordPress site to showcase Australian <span>game developers.</span></p>
-                  <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  <img src="https://placehold.it/800x300">
+                  <div>
+                    <h3>Games Developers Association of Australia</h3> 
+                    <p>Redesign of WordPress site to showcase Australian <span>game developers.</span></p>
+                    <div class="link">Visit site <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  </div>
                 </a>
-              </li>
+              </li>-->
             </ul> 
 
             <h2><span>Side projects</span></h2>
@@ -140,20 +158,20 @@
                 <a href="https://so-neto-email.surge.sh/" title="View Neto Email Content Generator project">
                   <h3>Email Content Generator</h3> 
                   <p>Construct emails from pre-witten content. Internal tool for <span>Neto staff.</span></p>
-                  <div class="link">View project <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  <div class="link">View demo <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
               <li>
                 <a href="https://so-tinysums.surge.sh/" title="View TinySums project">
                   <h3>Tiny Sums</h3> 
                   <p>Do back-of-the-envelope calculations with natural language. A real workout for <span>regex skills.</span></p>
-                  <div class="link">View project <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  <div class="link">View demo <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
               </li> 
               <li>
                 <a href="https://so-card-sort.surge.sh/" title="View Card Sort">
                   <h3>Card Sort</h3> 
                   <p>A Trello-like board, for lists or card-sorting exercises. Built <span>with Vue.</span></p>
-                  <div class="link">View project <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,236)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
+                  <div class="link">View demo <svg width="14" height="14" viewBox="0 -1 24 24"><path fill="rgb(46,25,136)" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg></div>
                 </a>
               </li>
             </ul>
@@ -189,7 +207,7 @@
         </div>
           
         <a href="mailto:hello@seanockert.com" class="cta" title="Send me an email to hello@seanockert.com">
-          <img src="../images/face.png" alt="Sean's face" height="70" width="60">
+          <img src="images/face.png" alt="Sean's face" height="70" width="60">
           Like what you see? Let's work together<span>.</span>
         </a>
 
